# Music-Share

./: .gitattributes  .gitignore  DEPLOYMENT.md  README.md  install.sh  route.md  start.sh
.github/workflows/: deploy-backend.yml  deploy-web-player.yml  deploy-worker.yml
android-app/: route.md  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/release/: output-metadata.json
backend/: .gitignore  README.md  cloudflare-migration.md  nginx.example.conf  package-lock.json  pyproject.toml  route.md  setup.sh  start.sh
backend/app/: __init__.py  __main__.py  asgi.py  config.py  database.py  main.py  models.py  services.py
backend/migrations/: 0001_init.sql  0003_usage_guardrails.sql
backend/src/: index.test.ts
backend/src/lib/: app.ts  contracts.ts  db.ts  errors.ts  http.ts  models.ts  serialization.ts  storage.ts  types.ts  usage.ts
backend/tests/: test_api.py  test_config.py  test_deployment_layout.py
web-player/: .env.example  README.md  cloudflare-migration.md  index.html  package-lock.json  package.json  route.md  tsconfig.json
web-player/src/: main.ts  style.css
web-player/src/app/: App.vue  router.ts
web-player/src/components/: AudioPlayer.vue  MetadataCopyPanel.vue  StatusBanner.vue  TrackHero.vue
web-player/src/pages/: ExpiredPage.vue  NotFoundPage.vue  TrackPage.vue
web-player/src/services/: api.ts
web-player/src/stores/: track.ts
worker-backend/: .gitignore  README.md  package.json  tsconfig.json  wrangler.toml
worker-backend/migrations/: 0002_share_background.sql
worker-backend/src/: index.test.ts  index.ts
(+56 files in other folders)
