[project]
name = "music-share-backend"
version = "0.1.0"
description = "Temporary audio sharing backend for Music Share."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0",
]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
